[package]
name = "mqtt-client"
version = "0.1.0"
edition = "2021"
default-run = "mqtt-client"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.11.0"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.17"
env_logger = "0.9.0"

