[package]
name = "mqtt_adls_bridge"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.3.0"
azure_storage = "0.4.0"
azure_storage_datalake = "0.4.0"
bytes = "1.2.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
paho-mqtt = "0.11.0"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4"] }

